--- a/Assignments/Assignment8.ipynb
+++ b/Assignments/Assignment8.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['0.5963110378508577\\n', '0.859351175295493\\n', '0.4483582599229702\\n', '0.16933523568641484\\n', '0.018255833709921676\\n', '0.3394288391433403\\n', '0.8138031895771609\\n', '0.38449082795579714\\n', '0.6116687535985963\\n', '0.874009402779976\\n']\n"
+      "['0.2510370185036336\\n', '0.3100444135336451\\n', '0.13602256196148443\\n', '0.8007067894618835\\n', '0.7591728882514224\\n', '0.4599734051992552\\n', '0.31416601992096127\\n', '0.44669109277919905\\n', '0.5448288617829933\\n', '0.9623915957593268\\n']\n"
      ]
     }
    ],
@@ -18,17 +18,11 @@
     "\n",
     "#Create a list and save it in a text file that each of the item in the list will take one line.\n",
     "import numpy as np\n",
-    "data = np.random.rand(10)\n",
+    "data_1 = np.random.rand(10)\n",
     "\n",
     "f = open('Assignment_8_1.txt', 'w')\n",
     "\n",
-    "#for i in range(len(data)):\n",
-    "    #f.write(str(data[i]))\n",
-    "    #f.write(\"\\n\")\n",
-    "    #or\n",
-    "    #f.write(str(data[i]) + (\"\\n\"))\n",
-    "\n",
-    "for i in data: \n",
+    "for i in data_1: \n",
     "    f.write(f\"{i}\\n\")\n",
     "f.close()\n",
     "\n",
@@ -37,104 +31,88 @@
     "content = f.readlines()\n",
     "f.close()\n",
     "\n",
-    "print(content)\n",
-    "#np.savetxt('Assignment_8_1.txt', data, fmt = '%.2f')"
+    "print(content)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Question 2\n",
+    "#Save the same list in problem 1 to a CSV file.\n",
+    "\n",
+    "np.savetxt('Q2.csv', data_1, fmt = '%.2f')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0.65340651 0.77324413 0.40899103 0.39769466 0.11084571]\n",
-      " [0.46108744 0.4744068  0.12785537 0.00454008 0.8624204 ]\n",
-      " [0.7925325  0.94206165 0.4485098  0.79536396 0.15910558]\n",
-      " [0.27782369 0.41668428 0.92523173 0.0443801  0.17659366]\n",
-      " [0.7840601  0.87095802 0.18788335 0.02345101 0.51296653]]\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "string indices must be integers",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [5], line 16\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m1\u001b[39m, \u001b[38;5;28mlen\u001b[39m(content)):\n\u001b[1;32m     15\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m j \u001b[38;5;129;01min\u001b[39;00m content[i]:\n\u001b[0;32m---> 16\u001b[0m         \u001b[38;5;28mprint\u001b[39m(\u001b[43mcontent\u001b[49m\u001b[43m[\u001b[49m\u001b[43mi\u001b[49m\u001b[43m]\u001b[49m\u001b[43m[\u001b[49m\u001b[43mj\u001b[49m\u001b[43m]\u001b[49m)\n",
-      "\u001b[0;31mTypeError\u001b[0m: string indices must be integers"
+      "[[0.94 0.3  0.01 0.41 0.69]\n",
+      " [0.45 0.17 0.32 0.04 0.26]\n",
+      " [0.24 0.43 0.9  0.07 0.93]\n",
+      " [0.75 0.83 0.38 0.35 0.48]\n",
+      " [0.45 0.83 0.75 0.62 0.77]]\n"
      ]
     }
    ],
    "source": [
-    "#Question 2\n",
+    "#Question #3\n",
+    "# Create a 2D numpy array, and save it to CSV file and read it back to a 2D array.\n",
     "\n",
-    "array_1 = np.random.rand(5,5)                   #Create 2d nummpy array\n",
-    "print(array_1)\n",
-    "np.savetxt('Q2.csv', array_1, fmt = '%.2f', delimiter = ',', header= 'c1,c2,c3,c4,c5')\n",
     "\n",
-    "f = open('Q2.csv','r')\n",
-    "#to put into an array or list, need to iterate through it; readlines() allows us to put it into list, which makes indices accessible through loops\n",
-    "content = f.readlines()                         #put into list line by line\n",
+    "#getting numbers\n",
+    "def getNumbers(str_1):\n",
+    "    numbers = []\n",
+    "    tmp = ''\n",
+    "\n",
+    "    for i in range(len(str_1)):\n",
+    "        #Extract numbers; any digit or point is part of the number\n",
+    "        if str_1[i].isdigit() or str_1[i]== '.':\n",
+    "            tmp += str_1[i]\n",
+    "        \n",
+    "        # Joining the obtained characters, if available, at each space or comma\n",
+    "        if (str_1[i]==' ' or str_1[i] == ',' or i==len(str_1)-1) and len(tmp):\n",
+    "            numbers.append(float(tmp))\n",
+    "            tmp=''\n",
+    "            \n",
+    "    return numbers\n",
+    "\n",
+    "\n",
+    "array_1 = np.random.rand(5,5)\n",
+    "np.savetxt('Q3.csv', array_1, fmt = '%.2f', delimiter=',', header = 'c1,c2,c3,c4,c5')\n",
+    "\n",
+    "f = open('Q3.csv', 'r')\n",
+    "content = f.readlines()\n",
     "f.close()\n",
     "\n",
-    "data = []                               #empty array\n",
-    "temp = ''\n",
-    "for i in range(1, len(content)):\n",
-    "    for j in content[i]:\n",
-    "        print(content[i][j])\n",
-    "        #if content[i][j].isdigit() or content[i] == '.':"
+    "\n",
+    "data = []\n",
+    "for i in content[1:]:\n",
+    "    data.append(getNumbers(i))\n",
+    "\n",
+    "data = np.array(data)\n",
+    "print(data)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'f' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [1], line 8\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(list_1)):\n\u001b[1;32m      7\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m j \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(list_1[i])):\n\u001b[0;32m----> 8\u001b[0m         \u001b[43mf\u001b[49m\u001b[38;5;241m.\u001b[39mwrite(\u001b[38;5;28mstr\u001b[39m(list_1[i][j]) \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m,\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m      9\u001b[0m         f\u001b[38;5;241m.\u001b[39mwrite(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     10\u001b[0m f\u001b[38;5;241m.\u001b[39mclose()\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'f' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "#Question 3\n",
-    "\n",
-    "#Save a nested list into a CSV file \n",
-    "list_1 = [[\"A\", \"B\", \"C\"], [\"D\", \"E\", \"F\"]]\n",
-    "\n",
-    "for i in range(len(list_1)):\n",
-    "    for j in range(len(list_1[i])):\n",
-    "        f.write(str(list_1[i][j]) + \",\")\n",
-    "        f.write(\"\\n\")\n",
-    "f.close()\n",
-    "asf\n",
-    "#Print it back as a 2D numpy array"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "EOFError",
-     "evalue": "Ran out of input",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mEOFError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [2], line 10\u001b[0m\n\u001b[1;32m      7\u001b[0m f2\u001b[38;5;241m.\u001b[39mclose\n\u001b[1;32m      9\u001b[0m f3 \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mopen\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m./Q4.pkl\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mrb\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m---> 10\u001b[0m my_data_1 \u001b[38;5;241m=\u001b[39m \u001b[43mpickle\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mload\u001b[49m\u001b[43m(\u001b[49m\u001b[43mf3\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     11\u001b[0m f3\u001b[38;5;241m.\u001b[39mclose()\n\u001b[1;32m     12\u001b[0m \u001b[38;5;28mprint\u001b[39m(my_data_1)\n",
-      "\u001b[0;31mEOFError\u001b[0m: Ran out of input"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.48814992 0.76595721 0.24207278 0.68023563 0.32150273 0.20105379\n",
+      " 0.30066533 0.42518267 0.38191042 0.97129206]\n"
      ]
     }
    ],
@@ -144,7 +122,7 @@
     "\n",
     "import pickle \n",
     "f2 = open('Q4.pkl', 'wb')\n",
-    "pickle.dump(list_1, f2)\n",
+    "pickle.dump(data_1, f2)\n",
     "f2.close\n",
     "\n",
     "f3 = open('./Q4.pkl', 'rb')\n",
