--- a/Exam Problems/Finals/FinalsPracticeProblems3.ipynb
+++ b/Exam Problems/Finals/FinalsPracticeProblems3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,20 +10,22 @@
     "\n",
     "class Square():\n",
     "    \n",
-    "    def __init__(self, C, l):\n",
+    "    def __init__(self, C, l):                   #C is the center coordinates, and l is the length\n",
     "        if (isinstance(C, tuple) and len(C) == 2):\n",
     "            pass\n",
     "        else: \n",
     "            raise(TypeError('C has to be a list of tuples and l has to be a float'))\n",
     "\n",
     "        self.__C = C  \n",
-    "        self.__V = [(C[0] - l/2, C[1] - l/2), (C[0] + l/2, C[1] -l/2), (C[0] + l/2, C[1] + l/2), (C[0]-l/2, C[1] + l/2)]\n",
-    "\n",
+    "        self.__V = [((C[0] - l/2), (C[1] - l/2)), \\\n",
+    "            ((C[0] + l/2), (C[1] -l/2)), \\\n",
+    "            (C[0] + l/2, C[1] + l/2), \\\n",
+    "            (C[0] -l/2, C[1] +l/2)]\n",
     "    def vertex(self, n):\n",
     "        return self.__V[n-1]\n",
     "\n",
     "    def sideLength(self):\n",
-    "        return abs(self.__V[0][0] - self.__V[1][0])                        #only the x components \n",
+    "        return abs(self.__V[0][0] - self.__V[1][0])                        #Since it's a square, it would have equal sides on all parts; just get one side\n",
     "           \n",
     "    def show(self, color = 'k'):\n",
     "        plt.fill([x for x, y in self.__V], [y for x, y in self.__V], color)                                                         #two lists using list comprehension\n",
@@ -34,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
