--- a/Exam Problems/Finals/FinalsPracticeProblems4.ipynb
+++ b/Exam Problems/Finals/FinalsPracticeProblems4.ipynb
@@ -54,7 +54,7 @@
    ],
    "source": [
     "my_list = [6,3,-1,5,7, 10]\n",
-    "insertion_sort(my_list)"
+    "insertion_sort(my_list)\n"
    ]
   },
   {
